--- a/manifests/traefik-configs/naraninyeo.yaml
+++ b/manifests/traefik-configs/naraninyeo.yaml
@@ -10,11 +10,13 @@ spec:
       match: Host(`naraninyeo-handler.ig.ingtra.net`)
       services:
         - name: naraninyeo-main-ks
-          port: 80
+          port: 443
+          scheme: https
           passHostHeader: false
           weight: 1
         - name: naraninyeo-develop-ks
-          port: 80
+          port: 443
+          scheme: https
           passHostHeader: false
           weight: 5
   tls:
