--- a/manifests/naraninyeo-configs/kafka.yaml
+++ b/manifests/naraninyeo-configs/kafka.yaml
@@ -41,4 +41,4 @@ spec:
             - name: OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT
               value: "65535"
             - name: NARANINYEO_NEW_MESSAGE_API 
-              value: https://naraninyeo-handler.ig.ingtra.net/
+              value: https://naraninyeo-handler.ig.ingtra.net
