--- a/manifests/naraninyeo-configs/kservice.yaml
+++ b/manifests/naraninyeo-configs/kservice.yaml
@@ -36,6 +36,8 @@ spec:
               value: http/protobuf
             - name: OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT
               value: "65535"
+            - name: REPLY_TEXT_PREFIX
+              value: "🧪 "
 
             # Secret 참조
             - name: NAVER_CLIENT_ID
