fix: update naraninyeo-kafka image version and refine environment variables in kafka.yaml and kservice.yaml

--- a/manifests/naraninyeo-configs/kafka.yaml
+++ b/manifests/naraninyeo-configs/kafka.yaml
@@ -14,31 +14,34 @@ spec:
     spec:
       containers:
         - name: naraninyeo-kafka
-          image: ghcr.io/cookieshake/naraninyeo:develop
+          image: ghcr.io/cookieshake/naraninyeo:2025-11-04-e6ca660
           imagePullPolicy: Always
-          args: ["kafka"]
           env:
-            - name: MONGODB_URL
-              value: mongodb.vd.ingtra.net
+            - name: NRIY_ENTRYPOINT
+              value: router
             - name: KAFKA_BOOTSTRAP_SERVERS
               value: 10.3.64.49:19092
             - name: KAFKA_GROUP_ID
               value: naraningyeo-v1
             - name: KAFKA_TOPIC
               value: event.nriy.new_message
-            - name: NARANINYEO_API_URL
+            - name: PHONE_API_URL
               value: http://10.2.17.185:3000
-            - name: QDRANT_URL
-              value: http://qdrant.vd.ingtra.net:6333
-            - name: LLAMA_CPP_EMBEDDINGS_URL
-              value: https://llama-cpp.ig.ingtra.net/qwen3-embedding-0.6b
-            - name: OTEL_RESOURCE_ATTRIBUTES
-              value: service.name=naraninyeo
-            - name: OTEL_EXPORTER_OTLP_ENDPOINT
-              value: https://alloy-otel-http.ig.ingtra.net
-            - name: OTEL_EXPORTER_OTLP_PROTOCOL
-              value: http/protobuf
-            - name: OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT
-              value: "65535"
-            - name: NARANINYEO_NEW_MESSAGE_API 
-              value: https://naraninyeo-handler.ig.ingtra.net
+            - name: FIRST_API_URL 
+              value: https://naraninyeo-main.ks.ingtra.net
+            - name: SECOND_API_URL
+              value: https://naraninyeo-develop.ks.ingtra.net
+            - name: S3_BUCKET
+              value: nriy-attachments
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: AWS_ACCESS_KEY_ID
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: S3_ENDPOINT_URL
+              value: https://s3.ingtra.net
