--- a/manifests/naraninyeo-configs/kservice.yaml
+++ b/manifests/naraninyeo-configs/kservice.yaml
@@ -61,19 +61,7 @@ spec:
           image: ghcr.io/cookieshake/naraninyeo:sha-7a692f0
           imagePullPolicy: Always
           env:
-            - name: MONGODB_URL
-              value: mongodb.vd.ingtra.net
-            - name: KAFKA_BOOTSTRAP_SERVERS
-              value: 10.3.64.49:19092
-            - name: KAFKA_GROUP_ID
-              value: naraningyeo-v1
-            - name: KAFKA_TOPIC
-              value: event.nriy.new_message
-            - name: NARANINYEO_API_URL
-              value: http://10.2.17.185:3000
-            - name: QDRANT_URL
-              value: http://qdrant.vd.ingtra.net:6333
-            - name: LLAMA_CPP_EMBEDDINGS_URL
+            - name: LLAMA_CPP_EMBEDDINGS_URI
               value: https://llama-cpp.ig.ingtra.net/qwen3-embedding-0.6b
             - name: OTEL_RESOURCE_ATTRIBUTES
               value: service.name=naraninyeo
@@ -81,10 +69,13 @@ spec:
               value: https://alloy-otel-http.ig.ingtra.net
             - name: OTEL_EXPORTER_OTLP_PROTOCOL
               value: http/protobuf
-            - name: OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT
-              value: "65535"
 
             # Secret 참조
+            - name: VCHORD_URI
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: VCHORD_URI
             - name: NAVER_CLIENT_ID
               valueFrom:
                 secretKeyRef:
