--- a/manifests/naraninyeo-configs/kservice.yaml
+++ b/manifests/naraninyeo-configs/kservice.yaml
@@ -15,7 +15,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: LLAMA_CPP_EMBEDDINGS_URI
-              value: https://llama-cpp.ig.ingtra.net/qwen3-embedding-0.6b
+              value: https://llama-cpp.ig.ingtra.net/embeddinggemma-300m
             - name: OTEL_RESOURCE_ATTRIBUTES
               value: service.name=naraninyeo
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
@@ -58,7 +58,7 @@ spec:
     spec:
       containers:
         - name: naraninyeo
-          image: ghcr.io/cookieshake/naraninyeo:sha-7a692f0
+          image: ghcr.io/cookieshake/naraninyeo:main
           imagePullPolicy: Always
           env:
             - name: LLAMA_CPP_EMBEDDINGS_URI
