fix: correct key name for Helm values in Airflow configuration

--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -17,7 +17,7 @@ spec:
     targetRevision: 3928c9d
     helm:
       releaseName: airflow
-      valuesObject:
+      values: |
         executor: "KubernetesExecutor"
         allowPodLaunching: true
         allowJobLaunching: false
