--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -28,17 +28,7 @@ spec:
         jwtSecretName: "jwt"
         config:
           dag_processor:
-            dag_bundle_config_list: |
-              [
-                {
-                  "name": "example_bundles",
-                  "classpath": "airflow.providers.git.bundles.git.GitDagBundle",
-                  "kwargs": {
-                    "tracking_ref": "main",
-                    "git_conn_id": "test"
-                  }
-                }
-              ]
+            dag_bundle_config_list: '[{"name": "example_bundles", "classpath": "airflow.providers.git.bundles.git.GitDagBundle", "kwargs": {"tracking_ref": "main", "git_conn_id": "test"}}]'
   destination:
     server: https://kubernetes.default.svc
     namespace: airflow
