fix: enable job launching in Airflow configuration

--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -20,7 +20,7 @@ spec:
       valuesObject:
         executor: "KubernetesExecutor"
         allowPodLaunching: true
-        allowJobLaunching: false
+        allowJobLaunching: true
         data:
           metadataSecretName: "metadata"
         fernetKeySecretName: "fernet-key"
