fix: enable migrateDatabaseJob in Airflow configuration

--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -25,6 +25,8 @@ spec:
           metadataSecretName: "metadata"
         fernetKeySecretName: "fernet-key"
         apiSecretKeySecretName: "api-secret-key"
+        migrateDatabaseJob:
+          enabled: true
         jwtSecretName: "jwt"
         postgresql:
           enabled: false
