fix: update secret names in Airflow configuration to use "secrets"

--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -22,12 +22,12 @@ spec:
         allowPodLaunching: true
         allowJobLaunching: true
         data:
-          metadataSecretName: "metadata"
-        fernetKeySecretName: "metadata"
-        apiSecretKeySecretName: "metadata"
+          metadataSecretName: "secrets"
+        fernetKeySecretName: "secrets"
+        apiSecretKeySecretName: "secrets"
         migrateDatabaseJob:
           enabled: true
-        jwtSecretName: "metadata"
+        jwtSecretName: "secrets"
         postgresql:
           enabled: false
         config:
