fix: update service name in Airflow IngressRoute configuration

--- a/manifests/traefik-configs/airflow.yaml
+++ b/manifests/traefik-configs/airflow.yaml
@@ -10,7 +10,7 @@ spec:
       match: Host(`airflow.ig.ingtra.net`)
       services:
         - kind: Service
-          name: api-server
+          name: airflow-api-server
           namespace: airflow
           port: 8080
   tls:
