--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -40,8 +40,7 @@ spec:
           core:
             simple_auth_manager_all_admins: "True"
             xcom_backend: "airflow.providers.common.io.xcom.backend.XComObjectStorageBackend"
-          common:
-            io:
+          "common.io":
               xcom_objectstorage_path: "s3://ingtranet_s3@airflow/xcoms"
               xcom_objectstorage_threshold: 0
               xcom_objectstorage_compression: "gzip"
