--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -18,7 +18,7 @@ spec:
     helm:
       releaseName: airflow
       valuesObject:
-        image:
+        images:
           airflow:
             tag: 3.1.5-python3.13
         executor: "KubernetesExecutor"
