--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -26,7 +26,7 @@ spec:
         allowJobLaunching: true
         data:
           metadataSecretName: "secrets"
-        extraEnvFrom:
+        extraEnvFrom: |
           - secretRef:
               name: "connections"
         triggerer:
