chore: Update Airflow image to use a custom repository and new tag.

--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -20,7 +20,8 @@ spec:
       valuesObject:
         images:
           airflow:
-            tag: 3.1.5-python3.13
+            repository: cookieshake/airflow
+            tag: 3.1.5-251213-z08
         executor: "KubernetesExecutor"
         allowPodLaunching: true
         allowJobLaunching: true
