--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -40,10 +40,10 @@ spec:
         jwtSecretName: "secrets"
         postgresql:
           enabled: false
-        apiServerConfig: |
-          AUTH_ROLE_PUBLIC = 'Admin'
         config:
           core:
+            auth_manager: "airflow.api_fastapi.auth.managers.simple.simple_auth_manager.SimpleAuthManager"
+            simple_auth_manager_all_admins: "True"
             xcom_backend: "airflow.providers.common.io.xcom.backend.XComObjectStorageBackend"
           "common.io":
             xcom_objectstorage_path: "s3://ingtranet_s3@airflow/xcoms"
