--- a/clusters/home/argo-applications/amoro.yaml
+++ b/clusters/home/argo-applications/amoro.yaml
@@ -28,6 +28,8 @@ spec:
         amoroConf:
           amoroDefaults: |
             ams:
+              server-bind-host: "0.0.0.0"
+              server-expose-host: "127.0.0.1"
               self-optimizing:
                 enabled: true
               expire-snapshots:
