--- a/clusters/home/argo-applications/amoro.yaml
+++ b/clusters/home/argo-applications/amoro.yaml
@@ -30,6 +30,8 @@ spec:
             ams:
               server-bind-host: "0.0.0.0"
               server-expose-host: "127.0.0.1"
+              http-server:
+                bind-port: 1630
               self-optimizing:
                 enabled: true
               expire-snapshots:
