Add webserver default user configuration

--- a/clusters/home/argo-applications/airflow.yaml
+++ b/clusters/home/argo-applications/airflow.yaml
@@ -27,6 +27,9 @@ spec:
         allowJobLaunching: true
         data:
           metadataSecretName: "secrets"
+        webserver:
+          defaultUser:
+            enabled: false
         triggerer:
           persistence:
             enabled: false
