--- a/clusters/home/argo-applications/trino.yaml
+++ b/clusters/home/argo-applications/trino.yaml
@@ -100,7 +100,7 @@ spec:
           - task.max-worker-threads=2
           - retry-policy=TASK
           - task-retry-attempts-per-task=15
-          - fault-tolerant-execution.exchange-encryption-enabled=false
+          - fault-tolerant-execution-exchange-encryption-enabled=false
           - fault-tolerant-execution-task-memory=1GB
         additionalExchangeManagerProperties:
           - exchange.s3.aws-access-key=system
